--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,15 @@ services:
   app:
     build: .
     ports:
-      - "80:${APP_PORT}"
+      - "${APP_PORT}:80"
     depends_on:
       - db
     environment:
       - DB_HOST=${DB_HOST}
+      - REACT_APP_IPTV_PROVIDER=${REACT_APP_IPTV_PROVIDER}
+      - EPG_URL=${EPG_URL}
+      - EPG_USERNAME=${EPG_USERNAME}
+      - EPG_PASSWORD=${EPG_PASSWORD}
   db:
     image: mysql/mysql-server:latest
     environment:
